toolkit/crashreporter/crash_helper_client/src/lib.rs
@@ -412,6 +412,7 @@ pub unsafe extern "C" fn crash_helper_rendezvous(client_endpoint: AncillaryData)
                     .is_ok(),
                 "The crash_helper_rendezvous() function must only be called once"
             );
+            return;
         }
 
         RENDEZVOUS_FAILED.store(true, Ordering::Relaxed);
